externaldns-oscp-dns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: oscp-prod
spec:
  template:
    spec:
      serviceAccountName: external-dns
      containers:
      - name: external-dns
        image: k8s.gcr.io/external-dns/external-dns:v0.13.6
        args:
        - --source=ingress
        - --domain-filter=oscp-toolkit.example.com
        - --provider=aws
