istio-oscp-mesh.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: oscp-scanners
spec:
  hosts:
  - oscp-toolkit.example.com
  http:
  - route:
    - destination:
        host: oscp-toolkit
